--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -35,8 +35,8 @@
                 </svg>
             </a>
             <a th:href="@{/pizza}" class="btn btn-light">Le nostre pizze</a>
-            <a th:href="@{/offer/view}" class="btn btn-light">Le nostre offerte</a>
-            <a th:href="@{/ingredients/}" class="btn btn-light">I nostri ingredienti</a>
+            <a th:href="@{/offer/view}" class="btn btn-light" sec:authorize="hasAuthority('ADMIN')">Le nostre offerte</a>
+            <a th:href="@{/ingredients/}" class="btn btn-light" sec:authorize="hasAuthority('ADMIN')">I nostri ingredienti</a>
             <form class="d-flex" methor="get" th:action="@{/pizza}"> 
                 <input name="keyword" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">
